--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,13 +2,14 @@ version: 0.2
 
 env:
   variables:
-    ECR_REPOSITORY: 164321144300.dkr.ecr.ap-northeast-1.amazonaws.com/api-repository
+    ECR_REPO_NAME: api-repository
 
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region ap-northeast-1 | docker login --username AWS --password-stdin ${ECR_REPOSITORY}
+      - ECR_MAIN_URI="${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
+      - ECR_IMAGE_URI="${ECR_MAIN_URI}/${ECR_REPO_NAME}:${CODEBUILD_RESOLVED_SOURCE_VERSION:0:8}"
   build:
     commands:
       - echo Building the Docker image...
