--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,10 +17,10 @@ phases:
   post_build:
     commands:
       - echo Pushing the Docker image...
-      # - docker tag ${ECR_REPO_NAME}:latest ${ECR_IMAGE_URI}
-      # - docker tag api-repository:latest ${ECR_REPOSITORY}:latest
-      - docker tag api-repository:latest ${ECR_IMAGE_URI}
-      - docker push ${ECR_IMAGE_URI}:latest
+      - docker tag cloudtech-reservation-api:latest ${ECR_IMAGE_URI}
+      - docker push ${ECR_IMAGE_URI}
+      # - docker tag api-repository:latest ${ECR_IMAGE_URI}
+      # - docker push ${ECR_IMAGE_URI}:latest
       # - echo Build completed on `date`
       # - echo Creating imageDetail.json...
       # - |
